Amélioration des filtres